DataEntry.css
@CHARSET "UTF-8";


.debug{
	clear: left;
	float: left;	
	display: block;
}

fieldset {
	margin: 0;
	border: 0;
	padding: 0;
}

#InvoiceNum {	clear: none;	display: block;	float: none; }
#InvoiceNum input{	width: 80px;}
#InvoiceNum label{	width: 120px;}

#CustomerSummary {
	clear: none;
	display: block;
	float: left;
	padding-right: 100px;
	padding-bottom: 20px;
}
#customerSummary input{
	clear: none;
	display: block;
	float: left;
	width: 140px;
}

#customerSummary label
{
	clear: none;
	float: left;
	text-align: right;
	padding-right: 10px;
	padding-left: 10px;
	display: block;
	width: 110px;
}

#CustomerSummary label.label-Suffix{	width: 100px;}
#CustomerSummary label.label-EMailAddress{		width: 160px;}

#CustomerSummary label.label-PhoneNumber,
#CustomerSummary label.label-Prefix,
#CustomerSummary label.label-FirstName,
#CustomerSummary label.label-LastName{
	clear: left;
}

#CustomerSummary input#FirstName,
#CustomerSummary input#LastName{
	width: 250px;
}
#CustomerSummary input#Suffix{
	width: 40px;
}



#InvoiceDetails,
#InvoiceEntryDetails
{
	clear: right;
	display: block;
	padding-top: 10px;
	padding-bottom: 20px;
	float: left;
	width: 810px;
}

#InvoiceDetails input,
#InvoiceEntryDetails input{
	float: left;
	width: 140px;
}
#InvoiceDetails label,
#InvoiceEntryDetails label
	{
	float: left;
	text-align: right;
	padding-right: 5px;
	padding-left: 10px;
	width: 80px;
}
#InvoiceDetails label.label-DateOrdered,
#InvoiceDetails label.label-DateShipped
	{
	float: left;
}
#InvoiceDetails label.label-TotalRetail,
#InvoiceEntryDetails  label.label-Price
	{	clear: left;}
	
#InvoiceDetails label.label-ShippingInstructions{	clear: left; display: block; width: 90px; padding-left: 0px;}

#InvoiceDetails .btn { clear: left;}
	
#knifeListItem{
	clear: left;
	display: block;
}

/* ================================================================================ */
#InvoiceKnifeList{
	float: left;
	display: block;
	width: 910px;
}


#InvoiceKnifeList br{
	clear: left;
}

#InvoiceKnifeList .PartDescription	{width: 80px;  text-align: left;   float: left; display: block; }
#InvoiceKnifeList .Quantity			{width: 80px;  text-align: center; float: left; display: block; }
#InvoiceKnifeList .TotalRetail		{width: 90px;  text-align: right;  float: left; display: block; padding-right: 10px;}
#InvoiceKnifeList .FeatureList		{width: 240px; text-align: left;   float: left; display: block; padding-right: 10px;}
#InvoiceKnifeList .Comment			{width: 260px; text-align: center; float: left; display: block; font-style: italic; }
#InvoiceKnifeList .Admin			{width: 120px; 	text-align: left; float: left; display: block;}


.InvoiceKnifeListHL .PartDescription, .InvoiceKnifeListHL .Quantity, .InvoiceKnifeListHL .TotalRetail,
	.InvoiceKnifeListHL .FeatureList,.InvoiceKnifeListHL .Comment
	{background-color: #CCCCCC;}


#InvoiceKnifeList .sheath{
	background-color: #0000FF;
	color:#FFFFFF;
}
#InvoiceKnifeList .etch{
	background-color: #FF0000;
	color:#FFFFFF;
}
/* ================================================================================ */
#invoicePayments{
	float: left;
	display: block;
	 padding-right: 10px;
	 width: 640px;
}

#invoicePayments br{
	clear: left;
}
#invoicePayments .Payment		{width: 80px;	text-align: right;	float: left; display: block;}
#invoicePayments .PaymentDate	{width: 110px;	text-align: left; float: left; display: block; }
#invoicePayments .Number		{width: 170px;	text-align: right; float: left; display: block;}
#invoicePayments .VCode			{width: 60px;	text-align: center; float: left; display: block; }
#invoicePayments .ExpirationDate{width: 120px; 	text-align: center; float: left; display: block;}
#invoicePayments .Admin			{width: 60px; 	text-align: center; float: left; display: block;}

#invoicePayments .HeaderPayment			{width: 80px;	text-align: center;	float: left; display: block; font-weight: bold;}
#invoicePayments .HeaderPaymentDate		{width: 110px;	text-align: center; float: left; display: block; font-weight: bold;}
#invoicePayments .HeaderNumber			{width: 170px;	text-align: center; float: left; display: block; font-weight: bold;}
#invoicePayments .HeaderVCode			{width: 60px;	text-align: center; float: left; display: block; font-weight: bold;}
#invoicePayments .HeaderExpirationDate	{width: 120px; 	text-align: center; float: left; display: block; font-weight: bold;}
#invoicePayments .HeaderAdmin			{width: 60px; 	text-align: center; float: left; display: block; font-weight: bold;}

.invoicePaymentsHL .Payment, .invoicePaymentsHL .PaymentDate, .invoicePaymentsHL .Number,
	.invoicePaymentsHL .VCode,.invoicePaymentsHL .ExpirationDate,.invoicePaymentsHL .Admin
	{background-color: #DDDDDD;}

#InvoiceDetailButtonLinks {
/*	clear: left;*/
	display: block;
	float:left;
	width: 620px;
}
#InvoiceDetailButtonLinks br{
	clear: right;
}

#InvoiceCommentEdit {
	float: left;
	display: block;
}
#InvoiceCommentEdit input{
	width: 110px;
		float: right;
/*	padding-left: 120px;*/
}
/* ================================================================================ */
.NewInvoicePayment_UnHide{
	clear: left;
	float: left;
	display: block;
	visibility: visible;
}
.NewInvoicePayment_UnHide br{	clear: left;}

.NewInvoicePayment{
	clear: left;
	float: left;
	display: none;
	visibility: hidden;
/*
	display: block;
	visibility: visible;
*/
/*	
	display: none;
	visibility: hidden;
*/
}


.NewInvoicePayment br{	clear: left;}


/* ================================================================================ */
#InvoicePaymentDeleteConfirm {
	float: left;
	display: block;
	width: 440px;
}
#InvoicePaymentDeleteConfirm br{	clear: left;}

#InvoicePaymentDeleteConfirm .label		{width: 110px;	text-align: left;	float: left; display: block; }
#InvoicePaymentDeleteConfirm .value		{width: 110px;	text-align: right;	float: left; display: block; }

/* ================================================================================ */
#invoiceFinanceSummary{
	float: left;
	display: block;
	padding-left: 20px;
}
/* ... */

